# drone-tracking-cv

./: .dockerignore  .gitignore  .gitmodules  README.md  sanity_check.sh
docker/px4_default/: .env  docker-compose.yaml  entrypoint.sh  exec.sh  run.sh
docker/px4_ros/: .env  docker-compose.yaml  exec.sh  run.sh
docker/px4_ros/px4/: Dockerfile  entrypoint.sh
docker/px4_ros/ros2/: Dockerfile  entrypoint.sh
docker_px4/: Dockerfile  px4-rc.rtps
example/: .env  docker-compose.yaml  entrypoint.sh
example_linux/: .env  docker-compose.yaml  entrypoint.sh  px4-rc.mavlink  px4-rc.params  px4-rc.simulator
src/move_px4/: package.xml  setup.cfg
src/move_px4/move_px4/: bot_controller.py  px4bot.py
src/opencv/: package.xml  setup.py
src/opencv/opencv/: drone_cv.py
src/tracker/: package.xml  setup.py
src/tracker/tracker/: comms.py  control_system.py  drone_cv.py  drone_model.py  joystick.py
